<resources>
    <string name="app_name">ShopApp</string>
    <string name="item_image_desc">ABC</string>
    <string name="home">Trang chủ</string>
    <string name="search">Tìm kiếm</string>
    <string name="cart">Giỏ hàng</string>
    <string name="info">Thông tin</string>
    <string name="mngt">Quản lí đơn hàng</string>
    <string name="change_password">Thay đổi mật khẩu</string>
    <string name="current_password">Mật khẩu hiện tại</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="confirm_new_password">Xác nhận mật khẩu</string>
    <string name="save">Lưu</string>

</resources>
